<resources>
    <string name="tfe_od_app_name" translation_description="Object Detection demo app [CHAR_LIMIT=40]">TFL Detect</string>
    <string name="tfe_od_camera_error" translation_description="Error regarding camera support[CHAR_LIMIT=40]">This device doesn\'t support Camera2 API.</string>
    <string name="googleApi">AIzaSyCZX3gPS1P9bS4CF9KsgpILQTIRia3aZto</string>
    <!--    <string name="app_name">Screenshot</string>-->
    <string name="take_screen_shot_activity">Activity Screenshot</string>
    <string name="take_screen_shot_view">Layout Screenshot</string>
    <string name="take_save_screen_shot">Save Screenshot</string>
    <string name="reset">Reset</string>
    <string name="toast_message_screenshot">First Take any Screenshot</string>
    <string name="toast_message_screenshot_success">Screenshot saved successfully.</string>
    <string name="settings_message">Go to Permissions to Grant Storage</string>
    <string name="login">LOGIN</string>

    <string name="passowrd">Password</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hidden Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="signUp">SIGN UP</string>
    <string name="fullName">Full Name</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="AppDetectInsect">App Detect Insect</string>
    <string name="email">Email</string>

    <string name="default_web_client_id">954999114451-s0t7u69ltv6u8if5n9sg9s09776clv2f.apps.googleusercontent.com</string>
    <string name="app_name">Insect Detect</string>
    <string name="forget_password">Forget Password</string>
    <string name="password">Password</string>
    <string name="repassword">Repassword</string>
    <string name="username">Username</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="register_a_new_account">Register a new account</string>
    <string name="wellcome">Welcome!</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_an_account">Create a account</string>
    <string name="todo">TODO</string>
    <string name="user_image_description">Tên\n</string>
    <string name="welcome_message">chào</string>
    <string name="hocvi">Học Vị(Người dùng / Chuyên Gia)</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_retrieve_map">RetrieveMapActivity</string>
    <string name="yolov9_object_detect">YOLOv9 Object Detection</string>
    <string name="gpu">GPU</string>
    <!--    <string name="app_name">Easy ChatGPT</string>-->

</resources>
