<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    tools:context=".regis">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/gradient_background">

        <androidx.cardview.widget.CardView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/logo"
            android:layout_marginStart="30dp"
            android:layout_marginTop="60dp"
            app:cardCornerRadius="10dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="centerCrop"
                android:background="@drawable/insects"
                android:padding="3dp"
                android:contentDescription="@string/todo" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sfprodisplay_bold"
            android:text="Đăng Ký"
            android:textColor="#696969"
            android:textSize="42sp" />

        <TextView
            android:id="@+id/signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcome"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/sfprodisplay_regular"
            android:text="Đăng ký tài khoản mới"
            android:textColor="#96A7AF"
            android:textSize="27sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:textColorHint="#96A7AF"
                android:background="@color/white"
                android:layout_below="@id/signin"
                app:startIconTint="@color/black"
                app:hintTextColor="@color/black"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/usericon"
                app:startIconDrawable="@drawable/ic_baseline_create_pencil"
                app:endIconTint="@color/black"
                android:id="@+id/username">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittext_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:autofillHints="@string/username"
                    android:textColor="#000"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:textColorHint="#96A7AF"
                android:background="@color/white"
                android:layout_below="@id/username"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/usericon"
                app:startIconDrawable="@drawable/ic_baseline_email_24"
                app:endIconTint="@color/black"
                android:id="@+id/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittext_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:autofillHints="@string/email"
                    android:textColor="#000"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                app:passwordToggleTint="#96A7AF"
                android:background="@color/white"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/passwordicon"
                android:textColorHint="#96A7AF"
                app:startIconDrawable="@drawable/ic_baseline_lock_24"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittext_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:autofillHints="@string/password"
                    android:textColor="#000" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/repassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                app:passwordToggleTint="#96A7AF"
                android:background="@color/white"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/passwordicon"
                android:textColorHint="#96A7AF"
                app:startIconDrawable="@drawable/ic_baseline_lock_24"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittext_repassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/repassword"
                    android:inputType="textPassword"
                    android:autofillHints="@string/repassword"
                    android:textColor="#000" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/repassword"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/bgblue"
            android:textColor="@android:color/darker_gray">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/sfprodisplay_bold"
                android:text="ĐĂNG KÝ"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                app:drawableEndCompat="@drawable/ic_baseline_arrow_forward_24" />
        </RelativeLayout>

        <TextView
            android:id="@+id/have_accountTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Có Tài Khoản? Đăng Nhập"
            android:textAlignment="center"
            android:layout_below="@id/btnSignup"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:textColor="@color/chu_dao" />
    </LinearLayout>
</RelativeLayout>
