<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".regis">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/gradient_background"
            android:paddingBottom="30dp">

            <!-- AVATAR PICKER -->
            <LinearLayout
                android:id="@+id/avatarPicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/avatarImageView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:background="@drawable/circle_background"
                    android:elevation="8dp"
                    android:contentDescription="Chọn ảnh đại diện" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Chọn ảnh đại diện"
                    android:textColor="#696969"
                    android:layout_marginTop="8dp" />
            </LinearLayout>

            <!-- TIÊU ĐỀ -->
            <TextView
                android:id="@+id/welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/sfprodisplay_bold"
                android:text="Đăng Ký"
                android:textColor="#696969"
                android:textSize="42sp" />

            <TextView
                android:id="@+id/signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/sfprodisplay_regular"
                android:text="Đăng ký tài khoản mới"
                android:textColor="#96A7AF"
                android:textSize="27sp" />

            <!-- FORM -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <!-- USERNAME -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@color/white"
                    app:startIconDrawable="@drawable/ic_baseline_create_pencil"
                    app:startIconTint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edittext_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username"
                        android:textColor="#000"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- EMAIL -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@color/white"
                    app:startIconDrawable="@drawable/ic_baseline_email_24"
                    app:startIconTint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edittext_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:textColor="#000"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- PASSWORD -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@color/white"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="#96A7AF"
                    app:startIconDrawable="@drawable/ic_baseline_lock_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edittext_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="#000" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- RE-PASSWORD -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/repassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@color/white"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="#96A7AF"
                    app:startIconDrawable="@drawable/ic_baseline_lock_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edittext_repassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/repassword"
                        android:inputType="textPassword"
                        android:textColor="#000" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <!-- ĐĂNG KÝ -->
            <RelativeLayout
                android:id="@+id/btnSignup"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/bgblue">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/sfprodisplay_bold"
                    android:text="ĐĂNG KÝ"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:drawableEndCompat="@drawable/ic_baseline_arrow_forward_24" />
            </RelativeLayout>

            <!-- ĐĂNG NHẬP -->
            <TextView
                android:id="@+id/have_accountTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Có Tài Khoản? Đăng Nhập"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:textColor="@color/chu_dao" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
